test/org/midica/testfiles/failing/opt-without-value-elsif-2.midica
INCLUDE inc/instruments.midica

VAR $x = 5

{ if $x
	0  c  /4
}
{ elsif=
	0  c  /4
}